* refined AbstractOsgiBundleApplicationContext internal resource loader creation so that subclasses can override it
* improved internal namespace service handling
* improved AbstractOsgiBundleApplicationContext handling of ResourceLoader methods
* introduced ContextClassLoaderProvider interface as a strategy for customizing the application context thread context
  class loader

Package org.springframework.osgi.extender
* added support.scanning package to allow custom locations to be used for 'Spring-powered' bundles
* added setter for delegated application context creator in ConditionalApplicationContextCreator
* improved ApplicationContextConfiguration internal structure
* added type filtering behaviour inside the extender so only Spring-compatible bundles are scanned and managed
* removed internal usage of Thread.stop as it breaks the VM state
* improved bundle shutdown by using a simple thread executor (rather then one thread per bundle model) to increase
  scalability

Package org.springframework.osgi.io
* improved getFile() method when dealing with resources in expanded bundles

Package org.springframework.osgi.service
* added descriptive exception when invoking non-public methods on class proxies (caused by classes with final mehtods)
* added ServiceProxyDestroyedException to indicate the illegal usage of a destroyed proxy
* refined dynamic proxies (unary cardinality) to throw ServiceProxyDestroyedException instead of IllegalStateException
* refined static proxies (multi cardinality) to throw ServiceProxyDestroyedException if used after being destroyed
* introduced ServiceReferenceProxy interface (available through ImportedOsgiServiceProxy) for accessing the native 
  service reference
* OsgiServiceFactoryBean performs type check validation on given interfaces at startup

Package org.springframework.osgi.test
* removed usage of PackageAdmin for resolving bundles

Package org.springframework.osgi.web